Bug 646157: Prevent 2^n growth in event dispatch in a chain of nested labels. r=smaug

Prior to this patch, Gecko allowed bubbling click events to trigger multiple <label>s, and for the synthetic click events generated by <label>s to also trigger additional <label>s.  In contrast, Opera allows only the latter, and Webkit/IE allow neither.  Gecko's behavior leads to 2^n events being dispatched in the case of markup like:

<label for="thing1" /><input type="foo" name="thing1" />
<label for="thing2" /><input type="foo" name="thing2" />
...

After this patch a bubbling click event triggers at most one <label>, and the synthetic click event cannot trigger additional labels.  Our behavior is still not identical to Webkit/IE though, because in Gecko a click event will still bubble up past a <label>, while in Webkit/IE the click event will stop at the <label>.